# 3-python-package-exercise-sst3

./: MANIFEST.in  Pipfile  README.md  example.py  instructions.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/sstgame/: __main__.py  anagram.py  hangman.py  hangman.txt  help.py  madlib.py  madlib.txt  numberGuess.py  randomGame.py  test_madlib.py  words.py  wyr.py  wyr.txt
tests/: test.txt  test_anagram.py  test_hangman.py  test_hangman.txt  test_madlib.py  test_numberGuess.py  test_randomGame.py  test_wyr.py
